# libsystrace

./: CMakeLists.txt  LICENSE.md  systrace.pc.in
rpm/: libsystrace.spec
